--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-install-global",
-  "description": "Simple API for globally installing a NPM package.",
+  "description": "Simple API for globally installing or uninstalling one or more NPM packages.",
   "version": "0.1.0",
   "homepage": "https://github.com/jonschlinkert/npm-install-global",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
