--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "dependencies": {
     "cross-spawn": "^4.0.0",
-    "fs-exists-sync": "^0.1.0"
+    "fs-exists-sync": "^0.1.0",
+    "global-modules": "^0.2.2"
   },
   "devDependencies": {
-    "global-modules": "^0.2.1",
     "gulp-format-md": "^0.1.9",
     "mocha": "^2.5.3"
   },
@@ -51,13 +51,14 @@
     ],
     "related": {
       "list": [
-        "generate",
         "base",
-        "base-npm"
+        "base-npm",
+        "generate"
       ]
     },
     "reflinks": [
-      "verb"
+      "verb",
+      "verb-readme-generator"
     ],
     "lint": {
       "reflinks": true
